# spyre-inference

./: CLAUDE.md  pyproject.toml
docs/architecture/rfcs/: upstream-connector-port-TRACKING.md  upstream-connector-port.md
docs/architecture/rfcs/figures/: spyre-offloading-arch.mmd
docs/getting_started/: installation.md
examples/offline_inference/: torch_spyre_inference.py
spyre_inference/: __init__.py  envs.py
spyre_inference/custom_ops/: __init__.py  linear.py  parallel_lm_head.py
spyre_inference/distributed/: spyre_communicator.py
spyre_inference/v1/kv_offload/: copier.py  handlers.py  kv_adapter.py  spec.py
spyre_inference/v1/worker/: spyre_model_runner.py  spyre_worker.py
tests/: test_distributed_tp2.py  test_mlp.py  test_parallel_lm_head.py
tests/plugin/: pyproject.toml
tests/plugin/spyre_testing_plugin/: sync_upstream_test_deps.py
tests/probes/: tp_probe.py
tests/v1/kv_offload/: test_copier_round_trip.py  test_e2e_offload.py  test_handler_dispatch.py  test_spec_registration.py
